--- a/assets/style.css
+++ b/assets/style.css
@@ -129,11 +129,22 @@ table {
   left: 0;
   padding-left: 56px;
   padding-right: 20px;
-  border-right: 1px solid gray;
+  border-right: 1px solid rgb(47, 51, 54);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   height: 100vh;
+  font-size: 19px;
+  font-weight: 700;
+}
+
+.left div {
+  cursor: pointer;
+}
+
+.left .profile-pic {
+  font-size: 15px;
+  font-weight: 400;
 }
 
 .left .d-flex .ms-3 {
@@ -170,9 +181,9 @@ table {
 }
 
 .center {
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
-  border-right: 1px solid gray;
+  border-top: 1px solid rgb(47, 51, 54);
+  border-bottom: 1px solid rgb(47, 51, 54);
+  border-right: 1px solid rgb(47, 51, 54);
 }
 
 .tweet-now {
@@ -193,7 +204,8 @@ table {
 .middle-tweet {
   background-color: #1d9bf0;
   border-radius: 99999px;
-  padding: 4px 10px;
+  padding: 8px 13px;
+  cursor: pointer;
 }
 
 .tweet-now .d-flex {
@@ -224,7 +236,7 @@ table {
 .left-small {
   padding-left: 13px;
   padding-right: 13px;
-  border-right: 1px solid gray;
+  border-right: 1px solid rgb(47, 51, 54);
   height: 100vh;
   width: fit-content;
   position: sticky;
@@ -239,8 +251,8 @@ table {
 .tweet-div {
   color: white;
   position: relative;
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
+  border-top: 1px solid rgb(47, 51, 54);
+  border-bottom: 1px solid rgb(47, 51, 54);
 }
 
 .tweet-div .profile-pic {
@@ -250,23 +262,32 @@ table {
 }
 
 .tweet-div .tweet-image {
-  width: 506px;
   border-radius: 14px;
 }
 
 .messi-div {
-  border-top: 1px solid gray;
+  border-top: 1px solid rgb(47, 51, 54);
 }
 
 .search-parent {
   padding: 5px 20px;
   position: sticky;
+  background-color: rgba(0, 0, 0, 0.9);
   top: 0;
   right: 0;
 }
 
 .search {
   position: relative;
+}
+
+.search input {
+  width: 307px;
+}
+
+.right {
+  padding: 0 25px;
+  margin: 0 15px;
 }
 
 .right input {
@@ -277,6 +298,19 @@ table {
   border-radius: 99999px;
   padding: 13px;
   padding-left: 38px;
+}
+
+.trends-for-you {
+  background-color: #16181c;
+  margin-top: 10px;
+  width: 348px;
+  border-radius: 12px;
+}
+
+.trends-for-you__header {
+  font-size: 19px;
+  font-weight: 800;
+  color: white;
 }
 
 @media only screen and (max-width: 1280px) {
